Fix #top-navigation z-index

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -26,6 +26,7 @@ h1.seo{
 }
 
 #top-navigation{
+  z-index: 2 !important;
   background: #555;
   padding-top: 10px;
   margin-bottom: 20px;
